Redirect native logs to SLF4J and update jextract gradle plugin